css/style.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body{
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
}

.container-flex{
    display: flex; 
}

/* header sidebar */

header{
    background-color: #000000;

    display: flex;
    flex-direction: column;

    width: 240px;
    max-height:calc(100vh - 90px);

}

header #header-inner{
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    height: 100%;

    padding: 30px 3px 10px 0;
}

/* header logo */
header #header-inner #header-top #header-logo img{
    width: 150px;
    padding-left: 20px;
}

/* HEADER TOP MENU */
header #header-inner #header-top #menu{
    padding-top: 30px;
}

/* menu ul  */
header #header-inner #header-top #menu ul{
    display: flex;
    flex-direction: column;
    gap: 15px;
}

/* menu li border  */
header #header-inner #header-top #menu ul li:first-child{
    
    border-left: 3px solid #9fff00;
    padding-left: 17px;
}

header #header-inner #header-top #menu ul li{
    padding-left: 17px;
}


/* links styles */
header #header-inner #header-top #menu ul a{
    display: flex;
    align-items: center;
    gap: 5px;

    text-decoration: none;
    color: #adadad;

    font-weight: 600;

    position: relative;
}

/* svg image gray and white :hover */
header #header-inner #header-top #menu ul li img.standard-svg{
    width: 30px;
}

header #header-inner #header-top #menu ul li img.white-svg{
    width: 30px;
    position: absolute;
    opacity: 0;
}

/* HEADER TOP PLAYLISTS  */
header #header-inner #header-top #playlists{

    padding-left: 20px;
    padding-top: 30px;
}

header #header-inner #header-top #playlists h3{
    color: white;
    text-transform: uppercase;
    font-size: 1.1em;
}

/* playlists style  */
header #header-inner #header-top #playlists ul{
    display: flex;
    flex-direction: column;
    gap: 15px;

    padding-top: 10px;

    list-style-type: none;
}

header #header-inner #header-top #playlists ul li a i{
    background-color: #adadad;
    color: black;
    padding: 10px;
}

header #header-inner #header-top #playlists ul li a{
    color: #adadad;
    text-decoration: none;
}


/* HEADER BOTTOM  */

header #header-inner #header-bottom{
    display: flex;
    flex-direction: column;
    gap: 10px;

    padding-left: 20px;
}

 /* header bottom download  */
header #header-inner #header-bottom #download{
    display: flex;
    align-items: center;
    gap: 10px;
}

header #header-inner #header-bottom #download img{
    width: 20px;
}

header #header-inner #header-bottom #download span{
    color: #adadad;
    font-size: .8em;
}

header #header-inner #header-bottom hr{
    border-color: #adadad;
    width: 200px;
}

/* header bottom user */
header #header-inner #header-bottom #user{
    display: flex;
    align-items: center;
    gap: 10px;
}

header #header-inner #header-bottom #user img{
    background-color: #adadad;

    width: 25px;
    height: 25px;
    object-fit: contain;
    border-radius: 50%;

}


header #header-inner #header-bottom #user span{
    color: white;
}







/* main  */

main{
    width: calc(100% - 240px);
    height: calc(100vh - 90px);

    overflow: auto;
    
    background-color: #121b27;
}

/* SECTION PREMIUM */

main #premium{
    display: flex;
    align-items: center;
    justify-content: flex-end;

    height: 90px;
    width: 100%;
    background-color: rgba(0, 0, 0, .4);
    padding-right: 10px;
}

main #premium #upgrade{
    background-color: transparent;
    border: 1px solid white;
    border-radius: 20px;
    color: white;
    padding: 10px 30px;
    font-size: .8em;
}


/* nav  */

nav{
    padding: 20px 0;
}

nav ul{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 30px;

    list-style-type: none;
}

nav ul li {
    display: flex;
    flex-direction: column;
    align-items: center;
}

nav ul li a{
    text-transform: uppercase;
    text-decoration: none;
    color: #adadad;

    padding-bottom: 2px;
}

nav ul li hr.selected-link{
    width: 40px;
    border-color: #9fff00;
}


/* MAIN SECT1  */

main #sect1{
    padding: 30px 20px 0;
}

main #sect1 h2{
    color: white;
}

main #sect1 #recently-played {
    display: flex;
    gap: 20px;
    padding-top: 30px;

}

/* albums cards */
main #sect1 #recently-played .card{
    width: calc(100% / 6 - 20px);

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;

}
/* album cover img  */
main #sect1 #recently-played .card .album-cover{
    width: 100%;
}
main #sect1 #recently-played .card .album-cover img{
    width: 100%;
}

/* album info  */
main #sect1 #recently-played .card #album-info{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;

}


main #sect1 #recently-played .card #album-info .title{
    color: white;
    font-weight: 600;
    text-align: center;
}

main #sect1 #recently-played .card #album-info .subtitle{
    color: #adadad;
    font-size: .8em;

    text-align: center;
}



/* MAIN SECT2 */


main #sect2{
    padding: 50px 20px 0px;
}

/* sect2 title and subtitle */
main #sect2 #sect2-text{
    display: flex;
    flex-direction: column;
    gap: 10px;
    
}
main #sect2 h2{
    color: white;
}

main #sect2 .suggestion{
    font-size: .8em;
    color: #adadad;
}

/* sect2 cards */

main #sect2 #created-for{
    display: flex;
    gap: 20px;

    padding-top: 30px;
}
main #sect2 #created-for .card{
    width: calc(100% / 6 - 20px);

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;

}
/* album cover img  */
main #sect2 #created-for .card .album-cover{
    width: 100%;
}
main #sect2 #created-for .card .album-cover img{
    width: 100%;
}

/* album info  */

main #sect2 #created-for .card #album-info .title{
    color: white;
    font-weight: 600;
    text-align: center;
}



/* MAIN SECT3 */

main #sect3{
    padding: 50px 20px 50px;
}

/* sect3 title and subtitle */
main #sect3 #sect3-text{
    display: flex;
    flex-direction: column;
    gap: 10px;
    
}
main #sect3 h2{
    color: white;
}

main #sect3 .suggestion{
    font-size: .8em;
    color: #adadad;
}

/* sect3 cards */

main #sect3 #popular-songs{
    display: flex;
    gap: 20px;

    padding-top: 30px;
}
main #sect3 #popular-songs .card{
    width: calc(100% / 6 - 20px);

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;

}
/* album cover img  */
main #sect3 #popular-songs .card .album-cover img{
    width: 100%;
    border-radius: 50%;
}

/* album info  */

main #sect3 #popular-songs .card #album-info .title{
    color: white;
    font-weight: 600;
    text-align: center;
}



/* footer commands bar */

footer{
    width: 100%;
    height: 90px;

    background-color: #2d2d2d;
    
    display: flex;
    justify-content: space-between;
    align-items: center;

    padding: 0 15px;

}


/* FOOTER LEFT  */
footer #footer-left{

    display: flex;
    align-items: center;
    gap: 50px;
}

/* playing song  */
footer #footer-left #playing-song{
    display: flex;
    align-items: center;
    gap: 10px;
}

footer #footer-left #playing-song img{
    width: 50px;
}

/* playing song info */
footer #footer-left #playing-song #playing-song-info{
    display: flex;
    flex-direction: column;
}

footer #footer-left #playing-song #playing-song-info #footer-singer{
    color: white;
    font-size: .8em;

}

footer #footer-left #playing-song #playing-song-info #footer-song{
    color: #adadad;
    font-size: .6em;
}

/* footer icon  */
footer #footer-left .icons{
    display: flex;
    gap: 15px;

    color: #adadad;
}
footer #footer-left #icons i{
    color: #adadad;
}



/* FOOTER MID */

footer #footer-mid{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;
}
/* footer mid top */
footer #footer-mid-top {
    display: flex;
    align-items: center;
    gap: 20px;
}

footer #footer-mid-top i{
    color: white;
}

footer #footer-mid-top i.fa-regular{
    font-size: 1.6em;
    padding: 0 10px;
}

/* footer mid bottom */

footer #footer-mid-bottom {
    display: flex;
    align-items: center;
    gap: 25px;
}

footer #footer-mid-bottom span{
    color: white;
    font-size: .5em;
}

/* time bar  */
footer #footer-mid-bottom #time-bar{
    height: 3px;
    width: 400px;
    background-color: #656565;
    border-radius: 10px;

}

/* listened time bar  */
footer #footer-mid-bottom #time-bar #time-listened-bar{
    height: 3px;
    width: 30%;
    background-color: #c8c8c8;
    border-radius: 10px;

    display: flex;
    align-items: center;
    justify-content: flex-end;
}

footer #footer-mid-bottom #time-bar #time-listened-bar i{
    display: none;
}


/* FOOTER RIGHT */

footer #footer-right{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
    
}

footer #footer-right .icons{
    color: white;
    display: flex;
    gap: 15px;
}

footer #footer-right #volume-bar{
    height: 3px;
    width: 100px;
    background-color: #656565;
    border-radius: 10px;
}

footer #footer-right #volume-bar #volume-level{
    height: 3px;
    width: 30%;
    background-color: #c8c8c8;
    border-radius: 10px;
}

